<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LinearLayoutHeader"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/product_details_image_view_cd"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:id="@+id/ImageViewProduct"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/dishonored"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TextViewProductTitle"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:textSize="26sp"
            android:text="Dishonored: Special Edition"
            android:textColor="#000000"/>

    </LinearLayout>


    <TextView
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:id="@+id/TextViewProductDetails"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:textColor="#000000"
        android:text="@string/product_details_product_description"/>



    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/linearLayoutCurrentlyInCart">
        <TextView
            android:id="@+id/textViewCurrentlyInCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="@string/product_details_currently_in_cart"
            android:layout_margin="5dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:id="@+id/linearLayoutAddLayout"
        android:orientation="horizontal"
        android:layout_margin="5dip">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_details_quantity"
            android:textColor="#000000"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1"
            android:gravity="end"
            android:id="@+id/editTextQuantity"
            android:inputType="number"/>
        <Button
            android:id="@+id/ButtonAddToCart"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@color/colorTextHint"
            android:text="@string/product_details_set_quantity"/>
    </LinearLayout>
</LinearLayout>