<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#ffffff">

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="24sp"
        android:layout_margin="5dp"
        android:text="@string/shopping_cart_title"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/shopping_cart_button_click_to_edit"/>

    <ListView
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/ListViewCatalog"
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:cacheColorHint="#ffffff"
        android:clickable="true"
        android:focusable="true"
        android:choiceMode="multipleChoice">

    </ListView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:id="@+id/LinearLayoutCheckout"
        android:layout_gravity="end">

        <Button
            android:id="@+id/buttonCheckout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorTextHint"
            android:text="@string/shopping_cart_button_checkout"
            android:onClick="goToCheckout"/>
    </LinearLayout>


</LinearLayout>